# Img-to-Ascii

./: .gitignore  CMakeLists.txt  RGB.hpp  main.cpp  ncur.cpp  render.cpp  render.hpp  run.sh  utils.hpp
img/: ascii_output.txt
src/: RGB.hpp  main.cpp  render.cpp  render.hpp
